force-app/main/default/objects/Job_Application__c/fields/Days_Since_Applied__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Applied__c</fullName>
    <label>Days Since Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>