force-app/main/default/objects/Job_Application__c/fields/Job_Posting_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Link__c</fullName>
    <label>Job Posting Link</label>
    <type>Url</type>
</CustomField>