force-app/main/default/objects/Job_Application__c/fields/Role_c__c.field-meta.xml
<CustomField>
    <fullName>Role_c__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>