force-app/main/default/objects/Job_Application__c/validationRules/Follow_Up_Date_After_Applied_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_Date_After_Applied_Date</fullName>
    <active>true</active>
    <description>Ensures Follow Up Date is not before Applied Date</description>
    <errorConditionFormula>AND(
     NOT(ISBLANK(Applied_Date__c)),
     NOT(ISBLANK(Follow_Up_Date__c)),
     Follow_Up_Date__c &lt; Applied_Date__c
   )</errorConditionFormula>
    <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Follow Up Date cannot be before the Applied Date.</errorMessage>
</ValidationRule>